syntax = "proto3";

package register_service;

// The node-register service definition.
service RegisterService {
    //modify rpc service
    rpc NewNode (RegisterRequest) returns (RegisterReply) {
    }
}

// The request message containing the node's ip.
message RegisterRequest {
    string ip = 1;
}

// The response message containing status and message
message RegisterReply {
    int32 status = 1;
    string message = 2;
}